<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_gpu"
        android:title="@string/gpu">
        <emu.skyline.preference.GpuDriverPreference
            app:key="gpu_driver"
            app:title="@string/gpu_driver_config" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:summaryOff="@string/triple_buffering_disabled"
            android:summaryOn="@string/triple_buffering_enabled"
            app:key="force_triple_buffering"
            app:title="@string/force_triple_buffering" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="force_triple_buffering"
            android:summaryOff="@string/disable_frame_throttling_disabled"
            android:summaryOn="@string/disable_frame_throttling_enabled"
            app:key="disable_frame_throttling"
            app:title="@string/disable_frame_throttling" />
        <SeekBarPreference
            android:defaultValue="4"
            android:max="6"
            android:min="1"
            android:summary="@string/executor_slot_count_scale_desc"
            app:key="executor_slot_count_scale"
            app:showSeekBarValue="true"
            app:title="@string/executor_slot_count_scale" />
        <SeekBarPreference
            android:defaultValue="256"
            android:max="1024"
            android:min="0"
            android:summary="@string/executor_flush_threshold_desc"
            app:key="executor_flush_threshold"
            app:showSeekBarValue="true"
            app:title="@string/executor_flush_threshold" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summary="@string/use_direct_memory_import_desc"
            app:key="use_direct_memory_import"
            app:title="@string/use_direct_memory_import" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summary="@string/force_max_gpu_clocks_desc"
            app:key="force_max_gpu_clocks"
            app:title="@string/force_max_gpu_clocks" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summary="@string/free_guest_texture_memory_desc"
            app:key="free_guest_texture_memory"
            app:title="@string/free_guest_texture_memory" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/shader_cache_enabled"
            android:summaryOn="@string/shader_cache_disabled"
            app:key="disable_shader_cache"
            app:title="@string/shader_cache" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
