<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_appearance"
        android:title="@string/appearance">
        <emu.skyline.preference.ThemePreference
            android:defaultValue="2"
            android:entries="@array/app_theme"
            app:key="app_theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="use_material_you"
            app:summaryOff="@string/use_material_you_desc_off"
            app:summaryOn="@string/use_material_you_desc_on"
            app:title="@string/use_material_you" />
        <emu.skyline.preference.LanguagePreference
            app:key="app_language"
            app:persistent="false"
            app:title="@string/app_language" />
        <emu.skyline.preference.IntegerListPreference
            android:defaultValue="1"
            android:entries="@array/layout_type"
            app:key="layout_type"
            app:title="@string/layout_type"
            app:useSimpleSummaryProvider="true" />
        <emu.skyline.preference.IntegerListPreference
            android:defaultValue="0"
            android:entries="@array/sort_apps_by"
            app:key="sort_apps_by"
            app:refreshRequired="true"
            app:title="@string/sort_apps_by"
            app:useSimpleSummaryProvider="true" />
        <emu.skyline.preference.RefreshSwitchPreferenceCompat
            android:defaultValue="true"
            android:summaryOff="@string/group_by_format_desc_off"
            android:summaryOn="@string/group_by_format_desc_on"
            app:key="group_by_format"
            app:title="@string/group_by_format" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/select_action_desc_off"
            android:summaryOn="@string/select_action_desc_on"
            app:key="select_action"
            app:title="@string/select_action" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
