<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_presentation"
        android:title="@string/display">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/perf_stats_desc_off"
            android:summaryOn="@string/perf_stats_desc_on"
            app:key="perf_stats"
            app:title="@string/perf_stats" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/max_refresh_rate_disabled"
            android:summaryOn="@string/max_refresh_rate_enabled"
            app:key="max_refresh_rate"
            app:title="@string/max_refresh_rate" />
        <emu.skyline.preference.IntegerListPreference
            android:defaultValue="6"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_values"
            app:key="orientation"
            app:title="@string/screen_orientation"
            app:useSimpleSummaryProvider="true" />
        <emu.skyline.preference.IntegerListPreference
            android:defaultValue="0"
            android:entries="@array/aspect_ratios"
            app:key="aspect_ratio"
            app:title="@string/aspect_ratio"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/respect_display_cutout_disabled"
            android:summaryOn="@string/respect_display_cutout_enabled"
            app:key="respect_display_cutout"
            app:title="@string/respect_display_cutout" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
