<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_hacks"
        android:title="@string/hacks">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/enable_fast_gpu_readback_disabled"
            android:summaryOn="@string/enable_fast_gpu_readback_enabled"
            app:key="enable_fast_gpu_readback_hack"
            app:title="@string/enable_fast_gpu_readback" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="enable_fast_gpu_readback_hack"
            android:summaryOff="@string/enable_fast_readback_writes_disabled"
            android:summaryOn="@string/enable_fast_readback_writes_enabled"
            app:key="enable_fast_readback_writes"
            app:title="@string/enable_fast_readback_writes" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/disable_subgroup_shuffle_disabled"
            android:summaryOn="@string/disable_subgroup_shuffle_enabled"
            app:key="disable_subgroup_shuffle"
            app:title="@string/disable_subgroup_shuffle" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
