<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_system"
        android:title="@string/system">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:summaryOff="@string/handheld_enabled"
            android:summaryOn="@string/docked_enabled"
            app:key="is_docked"
            app:title="@string/use_docked" />
        <emu.skyline.preference.CustomEditTextPreference
            android:defaultValue="@string/username_default"
            app:key="username_value"
            app:limit="31"
            app:title="@string/username" />
        <emu.skyline.preference.ProfilePicturePreference
            app:key="profile_picture_value"
            app:title="@string/profile_picture" />
        <emu.skyline.preference.IntegerListPreference
            android:defaultValue="1"
            android:entries="@array/system_languages"
            android:entryValues="@array/system_languages_val"
            app:key="system_language"
            app:refreshRequired="true"
            app:title="@string/system_language"
            app:useSimpleSummaryProvider="true" />
        <emu.skyline.preference.IntegerListPreference
            android:defaultValue="-1"
            android:entries="@array/system_region"
            android:entryValues="@array/system_region_val"
            app:key="system_region"
            app:title="@string/system_region"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_audio"
        android:title="@string/audio">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/disable_audio_output_disabled"
            android:summaryOn="@string/disable_audio_output_enabled"
            app:key="is_audio_output_disabled"
            app:title="@string/disable_audio_output" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
