<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_debug"
        android:title="@string/debug">
        <emu.skyline.preference.LogLevelPreference
            android:defaultValue="2"
            android:entries="@array/log_level"
            app:key="log_level"
            app:title="@string/log_level"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/validation_layer_disabled"
            android:summaryOn="@string/validation_layer_enabled"
            app:key="validation_layer"
            app:isPreferenceVisible="false"
            app:title="@string/validation_layer" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="@string/wait_idle_per_submit_disabled"
            android:summaryOn="@string/wait_idle_per_submit_enabled"
            app:key="wait_idle_per_submit"
            app:title="@string/wait_idle_per_submit" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
