<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="category_content"
        android:title="@string/content">
        <emu.skyline.preference.DocumentsProviderPreference
            app:key="document_provider"
            app:summary="@string/open_data_directory_summary"
            app:title="@string/open_data_directory" />
        <emu.skyline.preference.FolderPickerPreference
            app:key="search_location"
            app:title="@string/search_location" />
        <emu.skyline.preference.KeyPickerPreference
            app:key="prod_keys"
            app:title="@string/prod_keys"
            app:useSimpleSummaryProvider="true" />
        <emu.skyline.preference.KeyPickerPreference
            app:key="title_keys"
            app:title="@string/title_keys"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
